--- a/assets/app_setting.properties
+++ b/assets/app_setting.properties
@@ -3,10 +3,12 @@ isDebugMode=true
 #whether monitor network status change
 isMonitorNetChange=false;
 #logger parameter
-isLoggerPrint=false
-loggerPrintAvaidTime=600
-loggerPrintPath =/mnt/sdcard/ZW_FILE/
+isLoggerPrint=true
+loggerPrintAvaidTime=7
+loggerPrintName =ZW_LOG
 #database parameter
 dbVersion=1
 dbName=test
 dbOPeratorAvailTime=1000
+#rest
+isLoadRestRequest=true
