--- a/assets/app_setting.properties
+++ b/assets/app_setting.properties
@@ -1,7 +1,7 @@
 #whether open application debug mode
-isDebugMode=true
+isDebugMode=TRUE
 #whether monitor network status change
-isMonitorNetChange=false;
+isMonitorNetChange=TRUE
 #logger parameter
 isLoggerPrint=true
 loggerPrintAvaidTime=7
