--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,6 +9,10 @@
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     
     <application
         android:allowBackup="true"
@@ -37,10 +41,21 @@
             android:name="cn.tt100.base.example.DBTestActivity"
             android:screenOrientation="portrait" />
         
+        <activity
+            android:name="cn.tt100.base.example.NetTestActivity"
+            android:screenOrientation="portrait" />
+        
+        <activity
+            android:name="cn.tt100.base.example.DLTestActivity"
+            android:screenOrientation="portrait" />
+        
+        
         <!-- 一定要加  -->
         <activity
             android:name="cn.tt100.base.ErrorActivity"
             android:screenOrientation="portrait" />
+        
+        <service android:name=".download.DownloadService" />
         
     </application>
 
