--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -7,12 +7,19 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="19" />
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" 
-        android:name="cn.tt100.base.BaseApplication">
+        android:name="cn.tt100.base.ZWApplication">
         <activity
             android:name="cn.tt100.base.example.MenuActivity"
             android:label="@string/app_name"
@@ -26,8 +33,32 @@
         <activity
             android:name="cn.tt100.base.example.ImageTestActivity"
             android:screenOrientation="portrait" />
+        
+        <activity
+            android:name="cn.tt100.base.example.RestActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="cn.tt100.base.example.DBTestActivity"
+            android:screenOrientation="portrait" />
+        
+        <activity
+            android:name="cn.tt100.base.example.NetTestActivity"
+            android:screenOrientation="portrait" />
+        
+        <activity
+            android:name="cn.tt100.base.example.DLTestActivity"
+            android:screenOrientation="portrait" />
+        
+        
+        <!-- 一定要加  -->
+        <activity
+            android:name="cn.tt100.base.ErrorActivity"
+            android:screenOrientation="portrait" />
+        
+        <service android:name=".download.DownloadService" />
+        
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    
 </manifest>
