--- a/assets/app_setting.properties
+++ b/assets/app_setting.properties
@@ -1,3 +1,7 @@
+#*******************************************************#
+#******* setting value  TRUE or FALSE   ****************#
+#*******************************************************#
+
 #whether open application debug mode
 isDebugMode=TRUE
 #whether monitor network status change
