--- a/assets/app_setting.properties
+++ b/assets/app_setting.properties
@@ -16,5 +16,6 @@ dbName=test
 dbOPeratorAvailTime=1000
 #rest
 isLoadRestRequest=true
+isInterceptSameRequest=true
 #StrictMode
 isOpenStrictMode=true
