--- a/assets/app_setting.properties
+++ b/assets/app_setting.properties
@@ -19,3 +19,15 @@ isLoadRestRequest=true
 isInterceptSameRequest=true
 #StrictMode
 isOpenStrictMode=true
+
+
+#Image Loader
+isInitImageLoader=TRUE
+#VALUE: PNG OR JPEG   default JPEG
+imageSaveFormat=JPEG
+imageThreadPoolSize=3
+#unit: MB
+memoryCacheSize=2
+imageDiscCacheDir=/mnt/sdcard/uil_test
+#unit: MB
+discCacheSize=50
