--- a/assets/app_setting.properties
+++ b/assets/app_setting.properties
@@ -4,6 +4,7 @@
 
 #whether open application debug mode
 isDebugMode=TRUE
+isCaptureError=TRUE
 #whether monitor network status change
 isMonitorNetChange=TRUE
 #logger parameter
