--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -66,6 +66,10 @@
             android:name="cn.shrek.base.example.EventActivity"
             android:screenOrientation="portrait" />
         
+        <activity
+            android:name="cn.shrek.base.example.ThreadActivity"
+            android:screenOrientation="portrait" />
+        
         <!-- 一定要加  -->
         <activity
             android:name="cn.shrek.base.ErrorActivity"
