--- a/assets/app_setting.properties
+++ b/assets/app_setting.properties
@@ -8,13 +8,13 @@ isCaptureError=TRUE
 #whether monitor network status change
 isMonitorNetChange=TRUE
 #logger parameter
-isLoggerPrint=true
+isLoggerPrint=FALSE
 loggerPrintAvaidTime=7
 loggerPrintName =ZW_LOG
 #database parameter
 dbVersion=1
 dbName=test
-dbOPeratorAvailTime=1000
+dbOPeratorAvailTime=15000
 #rest
 isLoadRestRequest=true
 isInterceptSameRequest=true
@@ -26,9 +26,9 @@ isOpenStrictMode=true
 isInitImageLoader=TRUE
 #VALUE: PNG OR JPEG   default JPEG
 imageSaveFormat=JPEG
-imageThreadPoolSize=3
+imageThreadPoolSize=2
 #unit: MB
 memoryCacheSize=2
-imageDiscCacheDir=/mnt/sdcard/uil_test
+imageDiscCacheDir=/mnt/sdcard/uiltest
 #unit: MB
-discCacheSize=50
+discCacheSize=100
