--- a/assets/app_setting.properties
+++ b/assets/app_setting.properties
@@ -8,7 +8,7 @@ isCaptureError=TRUE
 #whether monitor network status change
 isMonitorNetChange=TRUE
 #logger parameter
-isLoggerPrint=FALSE
+isLoggerPrint=TRUE
 loggerPrintAvaidTime=7
 loggerPrintName =ZW_LOG
 #database parameter
