--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cn.tt100.base"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="v1.0" >
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -46,6 +46,10 @@
             android:screenOrientation="portrait" />
         
         <activity
+            android:name="cn.shrek.base.example.LogTestActivity"
+            android:screenOrientation="portrait" />
+        
+        <activity
             android:name="cn.shrek.base.example.DLTestActivity"
             android:screenOrientation="portrait" />
         <activity
@@ -72,6 +76,18 @@
         
         <activity
             android:name="cn.shrek.base.example.ListImgActivity"
+            android:screenOrientation="portrait" />
+        
+        <activity
+            android:name="cn.shrek.base.example.FocusActivity"
+            android:screenOrientation="portrait" />
+        
+        <activity
+            android:name="cn.shrek.base.download.ui.BaseDownLoadActivity"
+            android:screenOrientation="portrait" />
+        
+        <activity
+            android:name="cn.shrek.base.download.ui.BaseDownLoadInfo"
             android:screenOrientation="portrait" />
         
         <!-- 一定要加  -->
